--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@ __pycache__/
 # C extensions
 *.so
 
+# virtualenv
+venv
+
 # Distribution / packaging
 .Python
 env/
@@ -51,4 +54,3 @@ coverage.xml
 
 # Sphinx documentation
 docs/_build/
-
