Use jinja2 as the pyramid rendering system.

--- a/production.ini
+++ b/production.ini
@@ -11,6 +11,10 @@ pyramid.debug_authorization = false
 pyramid.debug_notfound = false
 pyramid.debug_routematch = false
 pyramid.default_locale_name = en
+jinja2.filters =
+    model_url = pyramid_jinja2.filters:model_url_filter
+    route_url = pyramid_jinja2.filters:route_url_filter
+    static_url = pyramid_jinja2.filters:static_url_filter
 
 ###
 # wsgi server configuration
