--- a/development.ini
+++ b/development.ini
@@ -13,6 +13,10 @@ pyramid.debug_routematch = false
 pyramid.default_locale_name = en
 pyramid.includes = 
     pyramid_debugtoolbar
+jinja2.filters =
+    model_url = pyramid_jinja2.filters:model_url_filter
+    route_url = pyramid_jinja2.filters:route_url_filter
+    static_url = pyramid_jinja2.filters:static_url_filter
 
 # By default, the toolbar only appears for clients from IP addresses
 # '127.0.0.1' and '::1'.
