Fix: setup.cfg (typo)

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [compile_catalog]
-directory = caliopen/locale
-domain = caliopen-public-site
+directory = caliopen/locale/
+domain = caliopen
 statistics = true
 
 [extract_messages]
