--- a/development.ini
+++ b/development.ini
@@ -13,6 +13,9 @@ pyramid.debug_routematch = false
 pyramid.default_locale_name = en
 pyramid.includes = 
     pyramid_debugtoolbar
+    pyramid_jinja2
+
+jinja2.i18n.domain = caliopen
 jinja2.filters =
     model_url = pyramid_jinja2.filters:model_url_filter
     route_url = pyramid_jinja2.filters:route_url_filter
