Change "static_url" to "static_path".

--- a/production.ini
+++ b/production.ini
@@ -16,9 +16,8 @@ pyramid.includes =
 
 jinja2.i18n.domain = caliopen
 jinja2.filters =
-    model_url = pyramid_jinja2.filters:model_url_filter
-    route_url = pyramid_jinja2.filters:route_url_filter
-    static_url = pyramid_jinja2.filters:static_url_filter
+    route_path = pyramid_jinja2.filters:route_path_filter
+    static_path = pyramid_jinja2.filters:static_path_filter
 
 ###
 # wsgi server configuration
