--- a/development.ini
+++ b/development.ini
@@ -17,9 +17,8 @@ pyramid.includes =
 
 jinja2.i18n.domain = caliopen
 jinja2.filters =
-    model_url = pyramid_jinja2.filters:model_url_filter
-    route_url = pyramid_jinja2.filters:route_url_filter
-    static_url = pyramid_jinja2.filters:static_url_filter
+    route_path = pyramid_jinja2.filters:route_path_filter
+    static_path = pyramid_jinja2.filters:static_path_filter
 
 # By default, the toolbar only appears for clients from IP addresses
 # '127.0.0.1' and '::1'.
