Don't compile css for production

--- a/production.ini
+++ b/production.ini
@@ -19,6 +19,8 @@ jinja2.filters =
     route_path = pyramid_jinja2.filters:route_path_filter
     static_path = pyramid_jinja2.filters:static_path_filter
 
+caliopen_ws.css = less
+
 ###
 # logging configuration
 # http://docs.pylonsproject.org/projects/pyramid/en/latest/narr/logging.html
