--- a/development.ini
+++ b/development.ini
@@ -19,6 +19,8 @@ jinja2.filters =
     route_path = pyramid_jinja2.filters:route_path_filter
     static_path = pyramid_jinja2.filters:static_path_filter
 
+caliopen_ws.css = less
+
 ###
 # wsgi server configuration
 ###
