css by default in production.

--- a/production.ini
+++ b/production.ini
@@ -19,7 +19,7 @@ jinja2.filters =
     route_path = pyramid_jinja2.filters:route_path_filter
     static_path = pyramid_jinja2.filters:static_path_filter
 
-caliopen_ws.css = less
+caliopen_ws.css = css
 
 ###
 # logging configuration
