Forgot a conf in production.ini.

--- a/production.ini
+++ b/production.ini
@@ -18,6 +18,7 @@ jinja2.i18n.domain = caliopen_website
 jinja2.filters =
     route_path = pyramid_jinja2.filters:route_path_filter
     static_path = pyramid_jinja2.filters:static_path_filter
+    static_url = pyramid_jinja2.filters:static_url_filter
 
 caliopen_ws.css = css
 
