add a RootContext to force redirect to https if configured this way

--- a/development.ini
+++ b/development.ini
@@ -21,6 +21,7 @@ jinja2.filters =
     static_url = pyramid_jinja2.filters:static_url_filter
 
 caliopen_ws.css = less
+caliopen_ws.force_https = false
 
 ###
 # wsgi server configuration
